Play etch a sketch with rainbow/color/size options
Changes made added a selection between rainbow and color options
removing the availability to select one while the other is active.
It also can not use right click to erase and there is test to
define that to the user.

--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
     </div>
     <div class="content">
         <div class="changeGrid">
-            <div class="colorSelection"><input class="colorPicker" type="color" id="colorPicker"><!-- insert a color wheel, black as default --></div>
-            <label class="colorLabel clicker" for="colorPicker">Choose a color</label>
+            <div class="modeSelector">
+                <button class="buttonLabel clicker colorButton" onclick="colorMode()">Color</button>
+                <button class="buttonLabel clicker rainbowButton" onclick="rainbowMode()">Rainbow</button>
+            </div>
+            <div class="colorSelection"><input class="colorPicker" type="color" id="colorPicker" value="#333333"><!-- insert a color wheel, black as default --></div>
+            <label id="colorLabel" class="clicker" for="colorPicker">Choose a color</label>
             <div class="gridSelection"><!-- insert a slider for gid size selection --></div>
             <div>Grid Size</div>
-            <input class="slider" type="range" min="2" max="64" value="2" onchange="sizeChange(this.value)" onmousemove="sizeValueChange(this.value)">
-            <div class="gridSize">2 x 2</div>
+            <input class="slider" type="range" min="2" max="64" value="8" onchange="sizeChange(this.value)" onmousemove="sizeValueChange(this.value)">
+            <div class="gridSize">8 x 8</div>
             <button class="clear clicker" onclick="clearGrid()">Clear</button>
         </div>
         <div class="grid">
             <!-- insert a grid pulled from parameters selected-->
         </div>
+        
     </div>
+    <p> Left click to draw, right click to erase</p>
     <div class="footer">
         <p>Page made by Troy Boxrucker 2022</p>
     </div>
